--- a/gtk-4.0/apps/_gnome.scss
+++ b/gtk-4.0/apps/_gnome.scss
@@ -267,3 +267,17 @@
     &:hover { color: $selected_bg_color; }
   } 
 }
+
+/*******************
+ * Calendar events *
+********************/
+.color-light {
+  &.timed label, .event-popover label {
+    color: $fg_color;
+    opacity: 1;
+  }
+  & label {
+    color: $bg_color;
+    opacity: 1;
+  }
+}
